--- a/animado/index.html
+++ b/animado/index.html
@@ -18,7 +18,7 @@
             color: rgb(255, 255, 255);
         }
         #lienzo {
-            background-color: darkslateblue ;
+            background-color: darkslateblue;
         }
     </style>
 </head>
@@ -27,6 +27,7 @@
         <h1>Mi dibujo con Canvas y Javascript</h1>
         <canvas id="lienzo" width="600" height="400"></canvas>
     </div>
-    <script src="./app.js"></script>
+    <!-- <script src="./app.js"></script> -->
+    <script src="./square.js"></script>
 </body>
 </html>
