--- a/rebota/index.html
+++ b/rebota/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dibujo con Canvas</title>
+    <title>Bolita que rebota</title>
     <style>
         body {
             margin: 0;
@@ -18,7 +18,7 @@
             color: rgb(255, 255, 255);
         }
         #lienzo {
-            background-color: darkslateblue ;
+            background-color:black ;
         }
     </style>
 </head>
