--- a/animado/otro.html
+++ b/animado/otro.html
@@ -25,7 +25,6 @@
             display: block;
             margin: 20px auto;
             }
-
             a {
             padding: 10px 20px;
             font-size: 15px;
@@ -51,12 +50,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Cuadrado Animado</h1>
+        <h1>Círculo Animado</h1>
         <canvas id="lienzo" width="600" height="400"></canvas>
         <div class="button-container">
             <a href="../index.html">Volver al Inicio</a></div>
     </div>
-    <!-- <script src="./app.js"></script> -->
-    <script src="./square.js"></script>
+    <script src="./app.js"></script>
+
 </body>
 </html>
