--- a/dibujos/index.html
+++ b/dibujos/index.html
@@ -19,13 +19,41 @@
         }
         #lienzo {
             background-color: darkslateblue ;
+            box-shadow: 0 0 15px 5px rgb(58, 35, 134);
+            display: block;
+            margin: 20px auto;
+            }
+
+            a {
+            padding: 10px 20px;
+            font-size: 15px;
+            font-weight: bold;
+            color: rgb(255, 255, 255);
+            background: linear-gradient(45deg,#68106a, #3a0737);
+            border: none;
+            border-radius: 12px;
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+            display: inline-block;
+            margin-top: 20px;
+            text-decoration: none;
+
         }
+
+        a:hover {
+            background: linear-gradient(45deg, #d640a7, #b537a4);
+            transform: translateY(-5px);
+            box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
+        }
+
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Mi dibujo con Canvas y Javascript</h1>
+        <h1>Dibujo de una Bruja 🧙‍♀️</h1>
         <canvas id="lienzo" width="600" height="400"></canvas>
+        <div class="button-container">
+            <a href="../index.html">Volver al Inicio</a></div>
     </div>
     <script src="./app.js"></script>
 </body>
