--- a/todoapp/index.html
+++ b/todoapp/index.html
@@ -16,6 +16,8 @@
             </form>
         </div>
         <div class="tareas"></div>
+        <div class="button-container">
+            <a href="../index.html">Volver al Inicio</a></div>
     </div>
     <script src="./app.js"></script>
 </body>
